--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.bones{
+	cursor: pointer;
+}
 .bone{
 	border: 2.5px solid gray;
 	width: 150px;
@@ -6,6 +9,7 @@
 	border-radius: 10px;
 	margin: 5px;
 	float: left;
+	cursor: pointer;
 }
 .bone:hover{
 	background-color: gray;
